frame/support/test/tests/pallet_ui/trait_constant_invalid_bound_lifetime.stderr
error: Invalid usage of `#[pallet::constant]`, syntax must be `type $SomeIdent: Get<$SomeType>;`
 --> $DIR/trait_constant_invalid_bound2.rs:9:3
  |
9 |         type U: Get<'static>;
  |         ^^^^

error: Expected a type argument
 --> $DIR/trait_constant_invalid_bound2.rs:9:15
  |
9 |         type U: Get<'static>;
  |                     ^^^^^^^
